@@ -28,3 +28,5 @@ B]Version 1.0.3[/B]
 - Updated regex 
 [B]Version 1.1.2[/B]
 - Updated regex 
+[B]Version 1.1.3[/B]
+- Islamic channels and peacetv
